<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/itemCbTripOptionOneWayCl"
        android:layout_width="match_parent"
        android:layout_height="245dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/itemOneWayClTravelFrom"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_70sdp"
            android:layout_gravity="left"
            android:layout_margin="@dimen/_20sdp"
            android:background="@drawable/btn_one_way_corner"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">


            <TextView
                android:id="@+id/text_from_oneway"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_15sdp"
                android:text="@string/from"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.048"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.09" />

            <EditText
                android:id="@+id/edt_from_oneway"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_40sdp"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_from_oneway"
                app:layout_constraintVertical_bias="0.851" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/itemOneWayCltravelTo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_70sdp"
            android:background="@drawable/btn_one_way_corner"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.609"
            app:layout_constraintStart_toEndOf="@+id/itemOneWayClTravelFrom"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.168">


            <TextView
                android:id="@+id/text_to_oneway"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_15sdp"
                android:text="@string/To"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.048"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.09" />

            <EditText
                android:id="@+id/edt_to_oneway"
                android:layout_width="166dp"
                android:layout_height="51dp"
                android:layout_marginTop="@dimen/_8sdp"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_to_oneway" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/itemOneWayClDepartureDate"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_70sdp"
            android:background="@drawable/btn_one_way_corner"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.144"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemOneWayClTravelFrom"
            app:layout_constraintVertical_bias="0.567">


            <TextView
                android:id="@+id/text_daparturedate_oneway"
                android:layout_width="149dp"
                android:layout_height="18dp"
                android:text="@string/Departure_Date"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.461"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.08" />

            <EditText
                android:id="@+id/edt_departuredate_oneway"
                android:layout_width="169dp"
                android:layout_height="53dp"
                android:layout_marginTop="@dimen/_8sdp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="12/02/2002"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_daparturedate_oneway" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/itemOneWayClArrivalDate"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_70sdp"
            android:background="@drawable/btn_one_way_corner"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.942"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemOneWayCltravelTo"
            app:layout_constraintVertical_bias="0.567">


            <TextView
                android:id="@+id/text_arrivaldate_oneway"
                android:layout_width="@dimen/_112sdp"
                android:layout_height="@dimen/_15sdp"
                android:text="@string/Arrival_Date"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.296"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.093" />

            <EditText
                android:id="@+id/edt_arrivaldate_oneway"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="8dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="12/02/2002"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_arrivaldate_oneway" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>